# splax_os

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  output.txt  qemu_output.txt  security.md  splax_kernel.json  splax_kernel_aarch64.json  splax_kernel_riscv64.json
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: README.md
bootloader/: Cargo.toml
bootloader/src/: main.rs
docker/: Dockerfile.grub  build-iso.sh
docs/: ACPI.md  API.md  ARCHITECTURE.md  BLOCK.md  COMMUNITY.md  EXT4.md  FAT32.md  FIREWALL.md  GPU.md  IPC.md  IPV6.md  MEMORY.md  MICROKERNEL.md  PCI.md  RELEASE.md  RISCV.md  SCHEDULER.md  SOUND.md  SPLAX_BLUEPRINT.md  TUTORIALS.md  USB.md  USER_MANUAL.md  VFS.md
kernel/: Cargo.toml  linker-aarch64.ld  linker-riscv64.ld  linker-x86_64.ld  linker.ld
kernel/src/: boot.S  dev_stub.rs  lib.rs  main.rs  main_aarch64.rs  process.rs
kernel/src/acpi/: mod.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: boot.S  exceptions.rs  gic.rs  mmu.rs  mod.rs  timer.rs  uart.rs
kernel/src/arch/riscv64/: boot.S  csr.rs  mmu.rs  mod.rs  plic.rs  sbi.rs  timer.rs  trap.rs  uart.rs
kernel/src/arch/x86_64/: context.rs  gdt.rs  idt.rs  interrupts.rs  keyboard.rs  lapic.rs  mod.rs  paging.rs  power.rs  rtc.rs  serial.rs  vga.rs
kernel/src/block/: ahci.rs  bio.rs  mod.rs  nvme.rs  partitions.rs  scheduler.rs  virtio_blk.rs
kernel/src/cap/: mod.rs  revocation.rs  verify.rs
kernel/src/crypto/: asymmetric.rs  cipher.rs  hash.rs  kdf.rs  keystore.rs  mac.rs  mod.rs  random.rs
kernel/src/fs/: devfs.rs  ext4.rs  fat32.rs  mod.rs  procfs.rs  ramfs.rs  splaxfs.rs  sysfs.rs  vfs.rs  vfs_stub.rs
kernel/src/gpu/: amd.rs  color.rs  console.rs  font.rs  framebuffer.rs  intel.rs  mod.rs  primitives.rs  wayland.rs
kernel/src/ipc/: distributed.rs  fastpath.rs  mod.rs
kernel/src/mm/: cfi.rs  frame.rs  mod.rs  mte.rs  security.rs
kernel/src/net/: arp.rs  cluster.rs  device.rs  discovery.rs  dns.rs  e1000.rs  ethernet.rs  firewall.rs  icmp.rs  ip.rs  ipv6.rs  k8s.rs  loadbalancer.rs  mesh.rs  mod.rs  namespace.rs  qos.rs  rtl8139.rs  socket.rs  ssh.rs  stub.rs  tcp.rs  tls.rs  udp.rs  virtio.rs  wifi.rs
kernel/src/pci/: mod.rs
kernel/src/process/: elf.rs  exec.rs  mod.rs  native.rs  service.rs  signal.rs  wait.rs
kernel/src/sched/: mod.rs  smp.rs
kernel/src/smp/: mod.rs  percpu.rs
kernel/src/sound/: ac97.rs  hda.rs  lowlatency.rs  mixer.rs  mod.rs  usb_audio.rs  virtio_snd.rs
kernel/src/usb/: descriptor.rs  hid.rs  mod.rs  msc.rs  uvc.rs  xhci.rs
kernel/src/wasm/: mod.rs
lib/crypto/: Cargo.toml
lib/crypto/src/: hmac.rs  lib.rs  sha256.rs  sha512.rs
runtime/native/: Cargo.toml
runtime/native/src/: dynlink.rs  lib.rs
runtime/wave/: Cargo.toml
runtime/wave/src/: aot.rs  lib.rs  wasi.rs
runtime/wave/src/jit/: ir.rs  memory.rs  mod.rs  regalloc.rs  x86_64.rs
runtime/wave/src/jit/ir/: optimize.rs
scripts/: build-docker-iso.sh  build-iso.sh  build.sh  qemu-aarch64.sh  qemu.sh  run_qemu_test.sh  splax  test.sh
services/atlas/: Cargo.toml
services/atlas/src/: lib.rs  observability.rs
services/canvas/: Cargo.toml
services/canvas/src/: compositor.rs  input.rs  lib.rs  surface.rs  theme.rs  window.rs
services/cap/: Cargo.toml
services/cap/src/: lib.rs
services/dev/: Cargo.toml
services/dev/src/: driver.rs  input.rs  irq.rs  lib.rs  sound.rs  touchpad.rs  usb.rs
services/gate/: Cargo.toml
services/gate/src/: http.rs  lib.rs  network.rs  tcp.rs
services/gpu/: Cargo.toml
services/gpu/src/: console.rs  framebuffer.rs  lib.rs  renderer.rs
services/init/: Cargo.toml
services/init/src/: container.rs  lib.rs  microkernel.rs
services/install/: Cargo.toml
services/install/src/: lib.rs
services/link/: Cargo.toml
services/link/src/: lib.rs
services/net/: Cargo.toml
services/net/src/: acl.rs  config.rs  firewall.rs  icmp.rs  ip.rs  lib.rs  socket.rs  tcp.rs  udp.rs
services/pkg/: Cargo.toml
services/pkg/src/: lib.rs  registry.rs
services/storage/: Cargo.toml
services/storage/src/: cas.rs  distributed.rs  lib.rs  object_api.rs  vfs_protocol.rs  vfs_server.rs
tests/: integration.rs
tests/bench/: mod.rs
tests/fuzz/: mod.rs
tests/unit/: mod.rs
tools/code/: Cargo.toml
tools/code/src/: main.rs  syntax.rs
tools/term/: Cargo.toml
tools/term/src/: emulator.rs  main.rs
tools/vim/: Cargo.toml
tools/vim/src/: main.rs
