[workspace]
members = [
    "bootloader",
    "kernel",
    "lib/crypto",
    "services/cap",
    "services/atlas",
    "services/canvas",
    "services/dev",
    "services/gpu",
    "services/init",
    "services/install",
    "services/link",
    "services/gate",
    "services/net",
    "services/storage",
    "services/pkg",
    "runtime/wave",
    "runtime/native",
    "tools/term",
    "tools/code",
    "tools/vim",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Splax OS Team"]
repository = "https://github.com/splax-s/splax_os"
description = "A production-grade, capability-secure, distributed-first operating system"

[workspace.dependencies]
# Shared dependencies across workspace
spin = "0.9"
bitflags = "2.4"
log = "0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"
strip = true
