[package]
name = "splax_bootloader"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UEFI bootloader for Splax OS - loads and verifies the kernel"

[dependencies]
log = { workspace = true }

[build-dependencies]

[[bin]]
name = "bootloader"
path = "src/main.rs"
