[package]
name = "splax_kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "S-CORE: The Splax OS microkernel - scheduling, memory, IPC, and capabilities"

[lib]
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "splax_kernel"
path = "src/main.rs"

# Note: splax_kernel_aarch64 binary must be built separately with:
# cargo build --target splax_kernel_aarch64.json --bin splax_kernel_aarch64
# This is due to architecture-specific assembly in main_aarch64.rs

[dependencies]
spin = { workspace = true }
bitflags = { workspace = true }
log = { workspace = true }
splax_wave = { path = "../runtime/wave" }

[features]
default = []
# Enable kernel debugging features
debug = []
# Enable performance profiling
profiling = []
# x86_64 architecture support
arch_x86_64 = []
# aarch64 architecture support  
arch_aarch64 = []
