[package]
name = "splax_kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "S-CORE: The Splax OS microkernel - scheduling, memory, IPC, and capabilities"

[lib]
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "splax_kernel"
path = "src/main.rs"

# Note: splax_kernel_aarch64 binary must be built separately with:
# cargo build --target splax_kernel_aarch64.json --bin splax_kernel_aarch64
# This is due to architecture-specific assembly in main_aarch64.rs

[dependencies]
spin = { workspace = true }
bitflags = { workspace = true }
log = { workspace = true }
splax_wave = { path = "../runtime/wave" }

[features]
default = []
# Enable kernel debugging features
debug = []
# Enable performance profiling
profiling = []
# x86_64 architecture support
arch_x86_64 = []
# aarch64 architecture support  
arch_aarch64 = []

# =============================================================================
# Microkernel Mode Features
# =============================================================================

# Full microkernel mode - only S-CORE primitives (sched, mm, ipc, cap)
# Disables all monolithic subsystems (net, usb, sound, gpu drivers)
microkernel = []

# Keep monolithic network stack in kernel (default: use S-NET service)
monolithic_net = []
# Keep monolithic USB drivers in kernel (default: use S-DEV service)
monolithic_usb = []
# Keep monolithic sound drivers in kernel (default: use S-DEV service)
monolithic_sound = []
# Keep monolithic GPU drivers in kernel (default: use S-GPU service)
monolithic_gpu = []
# Keep monolithic filesystem implementations (default: use S-STORAGE service)
monolithic_fs = []

# Hybrid mode - enable stubs for forwarding to userspace services
hybrid = []
