[package]
name = "splax_wave"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "S-WAVE: WebAssembly runtime for Splax OS"

[dependencies]
spin = { workspace = true }
log = { workspace = true }
splax_cap = { path = "../../services/cap" }

[features]
default = []
debug = []
# Enable WASI compatibility layer
wasi = []
# Enable SIMD support
simd = []
