[package]
name = "splax_atlas"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "S-ATLAS: Service registry and discovery for Splax OS"

[dependencies]
spin = { workspace = true }
log = { workspace = true }

[features]
default = []
# Enable debug logging
debug = []
