[package]
name = "splax_atlas"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "S-ATLAS: Service registry and discovery for Splax OS"

[dependencies]
spin = { workspace = true }
log = { workspace = true }
splax_cap = { path = "../cap" }

[features]
default = []
# Enable debug logging
debug = []
