[package]
name = "splax_gate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "S-GATE: External gateway service for Splax OS (TCP/HTTP)"

[dependencies]
spin = { workspace = true }
log = { workspace = true }
splax_cap = { path = "../cap" }

[features]
default = []
debug = []
# Enable HTTP/1.1 support
http1 = []
# Enable HTTP/2 support
http2 = []
